Fixed the collapsed mobile menu

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -32,7 +32,7 @@ $almostBlack: hsl(0, 0%, 8%);
         margin-left: 25%;
         display: none;
         position: absolute;
-        right: 12px;
+        right: 0px;
         left: 30px;
         z-index: 500;
         background-color: $almostWhite;
@@ -70,7 +70,7 @@ $almostBlack: hsl(0, 0%, 8%);
     }
     .heroSection{
         background-image: url('../images/image-hero-mobile.png');
-        height: 84vh;
+        height: 90vh;
         margin-top: 30px;
         background-size: cover;
         background-repeat: no-repeat;
